crates/biome_cli/tests/snapshots/main_cases_overrides_formatter/does_handle_included_file.snap
---
source: crates/biome_cli/tests/snap_test.rs
expression: content
---
## `biome.json`

```json
{
  "files": {
    "ignore": ["test.js", "special/**"]
  },
  "overrides": [{ "include": ["special/**"] }]
}
```

## `special/test2.js`

```js
statement();

```

## `test.js`

```js
  statement(  )  
```

# Emitted Messages

```block
Formatted 1 file(s) in <TIME>
```


