crates/biome_cli/tests/snapshots/main_cases_overrides_formatter/does_handle_included_file_and_disable_formatter.snap
---
source: crates/biome_cli/tests/snap_test.rs
expression: redactor(content)
---
## Command

```shell
biome format --write test.js special/test2.js
```

## `biome.json`

```json
{
  "files": {
    "includes": ["test.js", "special/**"]
  },
  "overrides": [
    { "includes": ["special/**"], "formatter": { "enabled": false } }
  ]
}
```

## `special/test2.js`

```js
  statement(  )  
```

## `test.js`

```js
statement();

```

# Emitted Messages

```block
Formatted 1 file in <TIME>. Fixed 1 file.
```
