crates/biome_cli/tests/snapshots/main_cases_overrides_formatter/does_include_file_with_different_formatting_and_all_of_them.snap
---
source: crates/biome_cli/tests/snap_test.rs
expression: redactor(content)
---
## Command

```shell
biome format --write test.js special/test2.js
```

## `biome.json`

```json
{
  "overrides": [
    { "includes": ["special/**"], "formatter": { "lineWidth": 130 } },
    { "includes": ["special/**"], "formatter": { "lineWidth": 20 } }
  ]
}
```

## `special/test2.js`

```js
const a = [
	"loreum",
	"ipsum",
];

```

## `test.js`

```js
const a = ["loreum", "ipsum"];

```

# Emitted Messages

```block
Formatted 2 files in <TIME>. Fixed 2 files.
```
