crates/biome_cli/tests/snapshots/main_cases_overrides_formatter/does_include_file_with_different_formatting_and_applies_the_first_one.snap
---
source: crates/biome_cli/tests/snap_test.rs
expression: content
---
## `biome.json`

```json
{
  "overrides": [
    { "include": ["special/**"], "formatter": { "lineWidth": 20 } },
    { "include": ["special/**"], "formatter": { "lineWidth": 130 } }
  ]
}
```

## `special/test2.js`

```js
const a = [
	"loreum",
	"ipsum",
];

```

## `test.js`

```js
const a = ["loreum", "ipsum"];

```

# Emitted Messages

```block
Formatted 2 file(s) in <TIME>
```


