crates/biome_cli/tests/snapshots/main_cases_overrides_formatter/does_include_file_with_different_languages_and_files.snap
---
source: crates/biome_cli/tests/snap_test.rs
expression: content
---
## `biome.json`

```json
{
  "overrides": [
    {
      "include": ["test.js"],
      "formatter": { "lineWidth": 120 },
      "javascript": { "formatter": { "quoteStyle": "single" } }
    },
    {
      "include": ["test2.js"],
      "formatter": { "lineWidth": 120, "indentStyle": "space" },
      "javascript": { "formatter": { "semicolons": "asNeeded" } },
      "json": {
        "formatter": {
          "indentStyle": "space",
          "lineWidth": 20,
          "indentWidth": 4
        }
      },
      "css": {
        "formatter": {
          "indentStyle": "space",
          "lineWidth": 30,
          "indentWidth": 3
        }
      }
    },
    {
      "include": ["test3.json"],
      "formatter": { "lineWidth": 120, "indentStyle": "space" },
      "json": {
        "formatter": {
          "indentStyle": "space",
          "lineWidth": 20,
          "indentWidth": 4
        }
      },
      "css": {
        "formatter": {
          "indentStyle": "space",
          "lineWidth": 30,
          "indentWidth": 3
        }
      }
    }
  ]
}
```

## `test.js`

```js
const a = ['loreum', 'ipsum'];

```

## `test2.js`

```js
const a = ["loreum", "ipsum"]

```

## `test3.json`

```json
{
    "asta": [
        "lorem",
        "ipsum",
        "first",
        "second"
    ]
}

```

## `test4.css`

```css
html {}
```

# Emitted Messages

```block
Formatted 4 file(s) in <TIME>
```


