crates/biome_cli/tests/snapshots/main_cases_overrides_formatter/does_not_change_formatting_language_settings.snap
---
source: crates/biome_cli/tests/snap_test.rs
expression: redactor(content)
---
## Command

```shell
biome format --write test.js test2.js
```

## `biome.json`

```json
{
  "javascript": { "formatter": { "quoteStyle": "single" } },
  "overrides": [{ "includes": ["test.js"], "linter": { "enabled": false } }]
}
```

## `test.js`

```js
const a = ['loreum', 'ipsum'];

```

## `test2.js`

```js
const a = ['loreum', 'ipsum'];

```

# Emitted Messages

```block
Formatted 2 files in <TIME>. Fixed 2 files.
```
